--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "allure-playwright": "^3.4.1"
   },
   "dependencies": {
+    "pdf-parse": "^2.3.0",
+    "pdfjs-dist": "^5.4.296",
+    "pdfreader": "^3.0.7",
     "xlsx": "^0.18.5"
   }
 }
