--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.56.0",
     "@types/node": "^24.7.0",
-    "allure-playwright": "^3.4.1"
+    "allure-playwright": "^3.4.1",
+    "allure-single-html-file-js": "^0.0.6"
   },
   "dependencies": {
     "pdf-parse": "^2.3.0",
