--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,27 +1,106 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      # Checkout code
+      - uses: actions/checkout@v4
+
+      # Setup Node.js
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci
+
+      # Install Playwright browsers
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      # Run Playwright tests
+      - name: Run Playwright tests
+        run: npx playwright test
+
+      # Upload Playwright HTML report
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
+      # Zip only the downloaded files and set output
+      - name: Zip downloaded files
+        id: zip_downloaded_files
+        if: ${{ !cancelled() }}
+        run: |
+          DOWNLOAD_DIR=".artifacts/downloads"
+          ZIP_FILE=".artifacts/downloads.zip"
+
+          echo "Contents of $DOWNLOAD_DIR before zip:"
+          ls -al "$DOWNLOAD_DIR" || echo "Directory not found"
+
+          if [ -d "$DOWNLOAD_DIR" ]; then
+            zip -r "$ZIP_FILE" "$DOWNLOAD_DIR"
+            if [ -f "$ZIP_FILE" ]; then
+              echo "zip_created=true" >> $GITHUB_OUTPUT
+              echo "ZIP file created successfully: $ZIP_FILE"
+            else
+              echo "zip_created=false" >> $GITHUB_OUTPUT
+              echo "Failed to create ZIP file"
+            fi
+          else
+            echo "No downloaded files found"
+            echo "zip_created=false" >> $GITHUB_OUTPUT
+          fi
+
+      # Create a release
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v1.0.0
+          release_name: Release v1.0.0
+          draft: false
+          prerelease: false
+
+      # Upload the zipped downloaded files as a release asset
+      - name: Upload downloaded files to Release
+        if: ${{ !cancelled() && steps.zip_downloaded_files.outputs.zip_created == 'true' }}
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: .artifacts/downloads.zip
+          asset_name: downloads.zip
+          asset_content_type: application/zip
+
+      # Upload zipped downloaded files as workflow artifact
+      - name: Upload downloaded files as artifact
+        if: ${{ !cancelled() && steps.zip_downloaded_files.outputs.zip_created == 'true' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: downloaded-files
+          path: .artifacts/downloads.zip
+          retention-days: 30
+
+      # Add the ZIP file reference to GitHub Actions summary
+      - name: Add downloaded files to summary
+        if: ${{ !cancelled() && steps.zip_downloaded_files.outputs.zip_created == 'true' }}
+        run: |
+          echo "### Downloaded Files" >> $GITHUB_STEP_SUMMARY
+          echo "You can download the ZIP file from the Artifacts section above or from the GitHub Release assets." >> $GITHUB_STEP_SUMMARY
