--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,37 @@
 name: Playwright Tests
+
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch:
+    inputs:
+      browser:
+        description: 'Select browser to run tests on'
+        required: true
+        type: choice
+        default: 'chromium'
+        options:
+          - chromium
+          - firefox
+          - webkit
+          - All
+
+      spec:
+        description: 'Select spec file to run'
+        required: true
+        type: choice
+        default: 'automationDemoSite.spec.ts'
+        options:
+          - automationDemoSite.spec.ts
+          - dynamicTablePDF.spec.ts
+          - example.spec.ts
+          - playgpdf.spec.ts
+          - playgrounddoc.spec.ts
+          - playgroundDynamic.spec.ts
+          - playgroundIMG.spec.ts
+          - qaPlayground.spec.ts
+          - qaPlaygroundDemoSite.spec.ts
+          - screener.spec.ts
+          - All
+
 jobs:
   test:
     timeout-minutes: 60
@@ -11,37 +39,56 @@ jobs:
 
     steps:
       # Checkout code
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       # Setup Node.js
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: 20
 
       # Install dependencies
       - name: Install dependencies
         run: npm ci
 
       # Install Playwright browsers
-      - name: Install Playwright Browsers
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      # Run Playwright tests
+      # Run Playwright tests (based on selection)
       - name: Run Playwright tests
-        run: npx playwright test
+        run: |
+          echo "Running on browser: ${{ github.event.inputs.browser }}"
+          echo "Running spec: ${{ github.event.inputs.spec }}"
+
+          if [ "${{ github.event.inputs.browser }}" = "All" ]; then
+            if [ "${{ github.event.inputs.spec }}" = "All" ]; then
+              npx playwright test --reporter=html
+            else
+              npx playwright test tests/${{ github.event.inputs.spec }} --reporter=html
+            fi
+          else
+            if [ "${{ github.event.inputs.spec }}" = "All" ]; then
+              npx playwright test --project=${{ github.event.inputs.browser }} --reporter=html
+            else
+              npx playwright test tests/${{ github.event.inputs.spec }} --project=${{ github.event.inputs.browser }} --reporter=html
+            fi
+          fi
 
       # Upload Playwright HTML report
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+      - name: Upload Playwright HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
+          name: playwright-report-${{ github.event.inputs.browser }}
           path: playwright-report/
           retention-days: 30
 
       # Zip only the downloaded files and set output
       - name: Zip downloaded files
         id: zip_downloaded_files
-        if: ${{ !cancelled() }}
+        if: always()
         run: |
           DOWNLOAD_DIR=".artifacts/downloads"
           ZIP_FILE=".artifacts/downloads.zip"
@@ -50,6 +97,7 @@ jobs:
           ls -al "$DOWNLOAD_DIR" || echo "Directory not found"
 
           if [ -d "$DOWNLOAD_DIR" ]; then
+            mkdir -p .artifacts
             zip -r "$ZIP_FILE" "$DOWNLOAD_DIR"
             if [ -f "$ZIP_FILE" ]; then
               echo "zip_created=true" >> $GITHUB_OUTPUT
@@ -63,42 +111,20 @@ jobs:
             echo "zip_created=false" >> $GITHUB_OUTPUT
           fi
 
-      # Create a release
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v1.0.0
-          release_name: Release v1.0.0
-          draft: false
-          prerelease: false
-
-      # Upload the zipped downloaded files as a release asset
-      - name: Upload downloaded files to Release
-        if: ${{ !cancelled() && steps.zip_downloaded_files.outputs.zip_created == 'true' }}
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: .artifacts/downloads.zip
-          asset_name: downloads.zip
-          asset_content_type: application/zip
-
       # Upload zipped downloaded files as workflow artifact
       - name: Upload downloaded files as artifact
-        if: ${{ !cancelled() && steps.zip_downloaded_files.outputs.zip_created == 'true' }}
+        if: ${{ steps.zip_downloaded_files.outputs.zip_created == 'true' }}
         uses: actions/upload-artifact@v4
         with:
           name: downloaded-files
           path: .artifacts/downloads.zip
           retention-days: 30
 
-      # Add the ZIP file reference to GitHub Actions summary
-      - name: Add downloaded files to summary
-        if: ${{ !cancelled() && steps.zip_downloaded_files.outputs.zip_created == 'true' }}
+      # Add summary
+      - name: Add summary
         run: |
-          echo "### Downloaded Files" >> $GITHUB_STEP_SUMMARY
-          echo "You can download the ZIP file from the Artifacts section above or from the GitHub Release assets." >> $GITHUB_STEP_SUMMARY
+          echo "### Playwright Manual Test Run" >> $GITHUB_STEP_SUMMARY
+          echo "**Browser:** ${{ github.event.inputs.browser }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Spec:** ${{ github.event.inputs.spec }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Report and downloaded files are available in the Artifacts section above." >> $GITHUB_STEP_SUMMARY
